--- a/src/input.css
+++ b/src/input.css
@@ -5,3 +5,38 @@
 --font-roboto:"Roboto", "sans-serif";
 --font-josefin: "Josefin Sans", "sans-serif";
 }
+@layer components{
+    .main-text  h1{
+        color: white;
+        font-size: 9rem;
+        position: absolute;
+        top: 64%;
+        left: 30%;
+        font-weight: 350;
+    }
+    .second-text{
+        color: white;
+        font-size: 3rem;
+        font-weight: 350;
+        position: absolute;
+        top: 90%;
+        left: 7%;
+        padding: 50px;
+        text-align: center;
+
+        
+    }
+    .third-text{
+        color: white;
+        font-size: 2rem;
+        font-weight: 200;
+        position: absolute;
+        top: 100%;
+        left: 5%;
+        padding: 70px;
+        text-align: center;
+          
+    }
+    
+  
+}
