--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+/* *{
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+} */
 .main-text  h1{
         color: white;
         font-size: 9rem;
@@ -29,8 +34,39 @@
         text-align: center;
           
     }
+    .content-two{
+        padding-bottom: 500px;
+        /* height: 100vh; */
+    }
     .content-two>button {
     background-color: red;
+    padding-inline: 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: buttonborder;
+    border-image: initial;
+}
+.ipad-image{
+   position: relative;
+   bottom: 250px;
+
+
+
+}
+.white-box button{
+    appearance: auto;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 0em 0em 0em 0em;
+    padding-block: 10px;
     padding-inline: 6px;
     border-width: 2px;
     border-style: outset;
