--- a/src/style.css
+++ b/src/style.css
@@ -6,32 +6,23 @@ box-sizing: border-box;
 .main-text  h1{
         color: white;
         font-size: 9rem;
-        position: absolute;
-        top: 64%;
-        left: 30%;
-        font-weight: 350;
+        padding-top: 320px;
+        font-weight: 340;
     }
     .second-text{
         color: white;
         font-size: 3rem;
         font-weight: 350;
-        position: absolute;
-        top: 90%;
-        left: 7%;
-        padding: 50px;
-        text-align: center;
+        
 
         
     }
     .third-text{
         color: white;
-        font-size: 2rem;
+        font-size: 1.9rem;
         font-weight: 200;
-        position: absolute;
-        top: 100%;
-        left: 5%;
-        padding: 70px;
-        text-align: center;
+        line-height: normal;
+        
           
     }
     .content-two{
@@ -72,4 +63,55 @@ box-sizing: border-box;
     border-style: outset;
     border-color: buttonborder;
     border-image: initial;
+}
+.content-four>h3{
+padding-top: 260px;
+}
+.content-four>p{
+padding-bottom: 200px;
+}
+.gift-cards>p{
+    width: 400px;
+}
+.reedem-btn{
+    appearance: auto;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 0em 0em 0em 0em;
+    padding-block: 10px;
+    padding-inline: 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: buttonborder;
+    border-image: initial;
+}
+.gift-cards>.card-img{
+        width: 40rem;
+        padding-top: 5rem;
+}
+.gift-cards{
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+}
+.footer{
+    gap: 80px;
+    padding: 84px;
+}
+.footer h4{
+    padding-bottom: 16px;
+}
+.footer li{
+    font-size: 20px;
+    line-height: normal;
+}
+.footer ul{
+    padding-top: 16px;
 }
